--- a/src/db-pool-access.properties
+++ b/src/db-pool-access.properties
@@ -9,6 +9,7 @@ tools.url=jdbc:mysql://127.0.0.1:3306/envcontrol?Unicode=true&characterEncoding=
 #tools.url=jdbc:informix-sqli://197.1.5.110:9533/checkid:informixserver=ids0
 tools.username=root
 tools.password=1
+tools.maxConnections=60
 
 # chinese convert
 
